# nexum

./: .gitignore  docker-compose.yml
client/: VERCEL_DEPLOY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/dev-dist/: sw.js
client/public/: site.webmanifest
client/src/: App.tsx  index.css
client/src/api/: auth.ts  community.ts  friends.ts  groups.ts  messages.ts  users.ts
client/src/components/: AboutModal.tsx  ActivityBar.tsx  AuthForm.tsx  CallOverlay.tsx  CommunityHub.tsx  ConfirmModal.tsx  CreateGroupModal.tsx  ErrorBoundary.tsx  FriendPanel.tsx  GroupChat.tsx  IncognitoToggle.tsx  ProfilePanel.tsx  SoundSettingsModal.tsx  ToastNotification.tsx  UserProfileModal.tsx
client/src/hooks/: useActivityBar.ts  useAuth.ts  useCallSounds.ts  useCommunity.ts  useConversationTransition.ts  useDraggable.ts  useFriendActivity.ts  useGroupMessages.ts  useIncognitoMode.ts  useInstallPrompt.ts  useMessages.ts  useNotificationSound.ts  useNotifications.ts  useReadReceipts.ts  useSocket.ts  useTheme.ts  useToastNotifications.ts  useTyping.ts  useUnreadCounts.ts  useWebRTC.ts
client/src/utils/: processScanner.ts
database/: schema.sql
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  process_scanner.rs
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: db.js  index.js  socketState.js
server/src/middleware/: authenticate.js  rateLimiter.js  sanitize.js
server/src/routes/: auth.js  (+5 more)
(+6 files in other folders)
