[package]
name    = "messenger-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name         = "messenger_desktop_lib"
crate-type   = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "messenger-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri  = { version = "2.0", features = [] }
serde  = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"   # optimise for binary size
strip     = true
