[package]
name    = "nexum-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name       = "nexum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexum-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri  = { version = "2.0", features = ["tray-icon"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
strip     = true
